--- a/.github/workflows/pkgs-delete.yml
+++ b/.github/workflows/pkgs-delete.yml
@@ -21,7 +21,7 @@ jobs:
         run: pip install packaging
       - name: Delete versions below 3.6.1
         env:
-          MYGET_FEED: 'neo'
+          MYGET_FEED: 'epicchain'
           PACKAGE_NAMES: 'EpicChain.SmartContract.Framework,EpicChain.SmartContract.Testing'
           MYGET_API_KEY: ${{ secrets.MYGET_TOKEN }}
         run: |
