--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "epicchain"]
 	path = epicchain
-	url = https://github.com/epicchainlabs/epicchain.git
+	url = https://github.com/epicchainlabs/epicchain
