EpicChain DevKit for .NET

--- a/src/EpicChain.SmartContract.Template/EpicChain.SmartContract.Template.csproj
+++ b/src/EpicChain.SmartContract.Template/EpicChain.SmartContract.Template.csproj
@@ -6,7 +6,7 @@
     <PackageType>Template</PackageType>
     <PackageId>EpicChain.SmartContract.Template</PackageId>
     <PackageTags>NEO;Blockchain;Smart Contract</PackageTags>
-    <Description>Templates to use when creating a smart contract for NEO.</Description>
+    <Description>Templates to use when creating a smart contract for EpicChain.</Description>
     <IncludeContentInPack>true</IncludeContentInPack>
     <IncludeBuildOutput>false</IncludeBuildOutput>
     <ContentTargetFolders>content</ContentTargetFolders>
