--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "neo"]
-	path = neo
-	url = https://github.com/neo-project/neo.git
+[submodule "epicchain"]
+	path = epicchain
+	url = https://github.com/epicchainlabs/epicchain.git
