--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,18 +39,18 @@ jobs:
       run: |
         dotnet pack ./src/EpicChain.SmartContract.Template/EpicChain.SmartContract.Template.csproj --configuration Debug
         dotnet new install ./src/EpicChain.SmartContract.Template/bin/Debug/EpicChain.SmartContract.Template.*.nupkg
-        dotnet new neocontractnep17 -n Nep17Contract -o ./src/EpicChain.SmartContract.Template/bin/Debug/nep17/ --force
-        dotnet new neocontractowner -n Ownable -o ./src/EpicChain.SmartContract.Template/bin/Debug/ownable/ --force
+        dotnet new epicchaincontractxep17 -n Xep17Contract -o ./src/EpicChain.SmartContract.Template/bin/Debug/xep17/ --force
+        dotnet new epicchaincontractowner -n Ownable -o ./src/EpicChain.SmartContract.Template/bin/Debug/ownable/ --force
         dotnet new neocontractoracle -n OracleRequest -o ./src/EpicChain.SmartContract.Template/bin/Debug/oracle/ --force
         dotnet new uninstall EpicChain.SmartContract.Template
-        dotnet remove ./src/EpicChain.SmartContract.Template/bin/Debug/nep17/Nep17Contract.csproj package EpicChain.SmartContract.Framework
-        dotnet add    ./src/EpicChain.SmartContract.Template/bin/Debug/nep17/Nep17Contract.csproj reference ./src/EpicChain.SmartContract.Framework/EpicChain.SmartContract.Framework.csproj
+        dotnet remove ./src/EpicChain.SmartContract.Template/bin/Debug/xep17/Xep17Contract.csproj package EpicChain.SmartContract.Framework
+        dotnet add    ./src/EpicChain.SmartContract.Template/bin/Debug/xep17/Xep17Contract.csproj reference ./src/EpicChain.SmartContract.Framework/EpicChain.SmartContract.Framework.csproj
         dotnet remove ./src/EpicChain.SmartContract.Template/bin/Debug/ownable/Ownable.csproj package EpicChain.SmartContract.Framework
         dotnet add    ./src/EpicChain.SmartContract.Template/bin/Debug/ownable/Ownable.csproj reference ./src/EpicChain.SmartContract.Framework/EpicChain.SmartContract.Framework.csproj
         dotnet remove ./src/EpicChain.SmartContract.Template/bin/Debug/oracle/OracleRequest.csproj package EpicChain.SmartContract.Framework
         dotnet add    ./src/EpicChain.SmartContract.Template/bin/Debug/oracle/OracleRequest.csproj reference ./src/EpicChain.SmartContract.Framework/EpicChain.SmartContract.Framework.csproj
-        dotnet ./src/EpicChain.Compiler.CSharp/bin/Debug/netEpicChain.SmartContractc/EpicChain.SmartContract.Template/bin/Debug/nep17/Nep17ContractEpicChain.SmartContracts/EpicChain.SmartContract.Template.UnitTests/templates/neocontractnep17/Artifacts/
-        dotnet ./src/EpicChain.Compiler.CSharp/bin/Debug/netEpicChain.SmartContractc/EpicChain.SmartContract.Template/bin/Debug/ownable/OwnableEpicChain.SmartContracts/EpicChain.SmartContract.Template.UnitTests/templates/neocontractowner/Artifacts/
+        dotnet ./src/EpicChain.Compiler.CSharp/bin/Debug/netEpicChain.SmartContractc/EpicChain.SmartContract.Template/bin/Debug/xep17/Xep17ContractEpicChain.SmartContracts/EpicChain.SmartContract.Template.UnitTests/templates/epicchaincontractxep17/Artifacts/
+        dotnet ./src/EpicChain.Compiler.CSharp/bin/Debug/netEpicChain.SmartContractc/EpicChain.SmartContract.Template/bin/Debug/ownable/OwnableEpicChain.SmartContracts/EpicChain.SmartContract.Template.UnitTests/templates/epicchaincontractowner/Artifacts/
         dotnet ./src/EpicChain.Compiler.CSharp/bin/Debug/netEpicChain.SmartContractc/EpicChain.SmartContract.Template/bin/Debug/oracle/OracleRequestEpicChain.SmartContracts/EpicChain.SmartContract.Template.UnitTests/templates/neocontractoracle/Artifacts/
     - name: Build Solution
       run: dotnet build ./epicchain-devkit-dotnet.sln
@@ -108,7 +108,7 @@ jobs:
 
     - name: Set Version (dev-pack)
       run: git rev-list --count HEAD | xargs printf 'CI%05d' | xargs -I{} echo 'VERSION_SUFFIX={}' >> $GITHUB_ENV
-    - name: Set Version (Neo)
+    - name: Set Version (EpicChain)
       run: |
         git --git-dir=./neo/.git rev-list --count HEAD | xargs printf 'CI%05d' | xargs -I{} echo 'VERSION_SUFFIX_NEO={}' >> $GITHUB_ENV
         sed -n 's/.*<VersionPrefix>\(.*\)<\/VersionPrefix>.*/\1/p' ./neo/src/Directory.Build.props | xargs -I{} echo 'VERSION_NEO={}' >> $GITHUB_ENV
@@ -119,7 +119,7 @@ jobs:
         --configuration Debug \
         --output ./out \
         --version-suffix ${{ env.VERSION_SUFFIX }}
-    - name : Replace Neo reference by package in EpicChain.SmartContract.Testing
+    - name : Replace EpicChain reference by package in EpicChain.SmartContract.Testing
       run: |
         dotnet remove ./src/EpicChain.SmartContract.Testing/EpicChain.SmartContract.Testing.csproj reference '..\..\epicchain\src\EpicChain\EpicChain.csproj'
         dotnet add    ./src/EpicChain.SmartContract.Testing/EpicChain.SmartContract.Testing.csproj package 'Neo' --version ${{ env.VERSION_NEO }}-${{ env.VERSION_SUFFIX_NEO }}
@@ -138,7 +138,7 @@ jobs:
       working-directory: ./out
       run: |
         dotnet nuget push * \
-            --source https://nuget.pkg.github.com/neo-project/index.json \
+            --source https://nuget.pkg.github.com/epicchainlabs/index.json \
             --api-key "${{ secrets.GITHUB_TOKEN }}" \
             --disable-buffering \
             --no-service-endpoint;
