--- a/examples/Example.SmartContract.XEP17/Example.SmartContract.XEP17.csproj
+++ b/examples/Example.SmartContract.XEP17/Example.SmartContract.XEP17.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <RootNamespace>NEP17</RootNamespace>
+        <RootNamespace>XEP17</RootNamespace>
     </PropertyGroup>
 
 </Project>
