--- a/examples/Directory.Build.props
+++ b/examples/Directory.Build.props
@@ -2,10 +2,10 @@
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
 
     <PropertyGroup>
-        <Copyright>2024 The Neo SmartContract Examples Project</Copyright>
-        <VersionPrefix>3.7.4</VersionPrefix>
+        <Copyright>2024 The EpicChain SmartContract Examples Project</Copyright>
+        <VersionPrefix>1.0.0</VersionPrefix>
         <TargetFramework>net8.0</TargetFramework>
-        <Authors>The Neo SmartContract Examples Project</Authors>
+        <Authors>The EpicChain SmartContract Examples Project</Authors>
         <PackageIcon>epicchain.png</PackageIcon>
         <PackageProjectUrl>https://github.com/epicchainlabs/epicchain-devkit-dotnet/examples</PackageProjectUrl>
         <PackageLicenseExpression>MIT</PackageLicenseExpression>
@@ -14,7 +14,7 @@
         <RepositoryUrl>https://github.com/epicchainlabs/epicchain-devkit-dotnet.git</RepositoryUrl>
         <IncludeSymbols>true</IncludeSymbols>
         <SymbolPackageFormat>snupkg</SymbolPackageFormat>
-        <Company>The Neo N3 Contract Examples Project</Company>
+        <Company>The EpicChain Contract Examples Project</Company>
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
         <Nullable>enable</Nullable>
         <AllowUnsafeBlocks>false</AllowUnsafeBlocks>
