--- a/src/EpicChain.SmartContract.Template/templates/neocontractnep17/Xep17Contract.csproj
+++ b/src/EpicChain.SmartContract.Template/templates/neocontractnep17/Xep17Contract.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="EpicChain.SmartContract.Framework" Version="TemplateNeoVersion" />
+    <PackageReference Include="EpicChain.SmartContract.Framework" Version="TemplateEpicChainVersion" />
   </ItemGroup>
 
   <PropertyGroup>
