EpicChain DevKit for .NET - EpicChain Lab's

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ on:
 env:
   DOTNET_VERSION: 8.0.x
   DOTNET_TEST_PARAMETERS: --no-build /p:CollectCoverage=true -l "console;verbosity=detailed"
-  COVERLET_EXCLUDE_COVERAGE: /p:Exclude=\"[EpicChain.SmartContract.TestEngine]*,[EpicChain.Compiler.CSharp.UnitTests]*,[Neo]*,[EpicChain.IO]*,[EpicChain.Json]*,[EpicChain.VM]*,[EpicChain.Extensions]*,[EpicChain.Cryptography.BLS12_381]*\"
+  COVERLET_EXCLUDE_COVERAGE: /p:Exclude=\"[EpicChain.SmartContract.TestEngine]*,[EpicChain.Compiler.CSharp.UnitTests]*,[EpicChain]*,[EpicChain.IO]*,[EpicChain.Json]*,[EpicChain.VM]*,[EpicChain.Extensions]*,[EpicChain.Cryptography.BLS12_381]*\"
   COVERLET_OUTPUT: /p:CoverletOutput=${{ github.workspace }}/coverage-join/
   COVERLET_MERGE_WITH: /p:MergeWith=${{ github.workspace }}/coverage-join/coverage.json
 
@@ -92,7 +92,7 @@ jobs:
         file: ${{ github.workspace }}/coverage/lcov.info
 
   PublishPackage:
-    if: github.ref == 'refs/heads/master' && startsWith(github.repository, 'neo-project/')
+    if: github.ref == 'refs/heads/master' && startsWith(github.repository, 'epicchainlabs/')
     needs: Test
     runs-on: ubuntu-latest
     steps:
@@ -110,8 +110,8 @@ jobs:
       run: git rev-list --count HEAD | xargs printf 'CI%05d' | xargs -I{} echo 'VERSION_SUFFIX={}' >> $GITHUB_ENV
     - name: Set Version (EpicChain)
       run: |
-        git --git-dir=./epicchain/.git rev-list --count HEAD | xargs printf 'CI%05d' | xargs -I{} echo 'VERSION_SUFFIX_NEO={}' >> $GITHUB_ENV
-        sed -n 's/.*<VersionPrefix>\(.*\)<\/VersionPrefix>.*/\1/p' ./epicchain/src/Directory.Build.props | xargs -I{} echo 'VERSION_NEO={}' >> $GITHUB_ENV
+        git --git-dir=./epicchain/.git rev-list --count HEAD | xargs printf 'CI%05d' | xargs -I{} echo 'VERSION_SUFFIX_EpicChain={}' >> $GITHUB_ENV
+        sed -n 's/.*<VersionPrefix>\(.*\)<\/VersionPrefix>.*/\1/p' ./epicchain/src/Directory.Build.props | xargs -I{} echo 'VERSION_EpicChain={}' >> $GITHUB_ENV
 
     - name : Pack (EpicChain.SmartContract.Framework)
       run: |
@@ -122,7 +122,7 @@ jobs:
     - name : Replace EpicChain reference by package in EpicChain.SmartContract.Testing
       run: |
         dotnet remove ./src/EpicChain.SmartContract.Testing/EpicChain.SmartContract.Testing.csproj reference '..\..\epicchain\src\EpicChain\EpicChain.csproj'
-        dotnet add    ./src/EpicChain.SmartContract.Testing/EpicChain.SmartContract.Testing.csproj package 'Neo' --version ${{ env.VERSION_NEO }}-${{ env.VERSION_SUFFIX_NEO }}
+        dotnet add    ./src/EpicChain.SmartContract.Testing/EpicChain.SmartContract.Testing.csproj package 'EpicChain' --version ${{ env.VERSION_EpicChain }}-${{ env.VERSION_SUFFIX_EpicChain }}
     - name : Build (EpicChain.SmartContract.Testing)
       run: |
         dotnet build ./src/EpicChain.SmartContract.Testing -f net8.0
@@ -146,7 +146,7 @@ jobs:
       working-directory: ./out
       run: |
         dotnet nuget push * \
-            --source https://www.myget.org/F/neo/api/v3/index.json \
+            --source https://www.myget.org/F/epicchain/api/v3/index.json \
             --api-key "${{ secrets.MYGET_TOKEN }}" \
             --disable-buffering \
             --no-service-endpoint;
