--- a/.github/workflows/pkgs-delete.yml
+++ b/.github/workflows/pkgs-delete.yml
@@ -19,9 +19,9 @@ jobs:
         run: pip install requests
       - name: Install Packaging
         run: pip install packaging
-      - name: Delete versions below 3.6.1
+      - name: Delete versions below 1.0.0
         env:
-          MYGET_FEED: 'neo'
+          MYGET_FEED: 'epicchain'
           PACKAGE_NAMES: 'ntract.FrammartContract.Testing'
           MYGET_API_KEY: ${{ secrets.MYGET_TOKEN }}
         run: |
