--- a/NuGet.Config
+++ b/NuGet.Config
@@ -2,7 +2,7 @@
 <configuration>
   <packageSources>
     <clear />
-    <add key="MyGet-epicchain" value="https://www.myget.org/F/neo/api/v3/index.json" />
+    <add key="MyGet-epicchain" value="hhttps://www.myget.org/F/epicchain/api/v3/index.json" />
     <add key="NuGet.org" value="https://api.nuget.org/v3/index.json" />
   </packageSources>
 </configuration>
